# amr_2dsim

./: README.md  package.xml  setup.cfg  setup.py
amr_2dsim/: map_converter.py  simulator_node.py  test_parse_sim_config.py
config/: mapping_params.yaml  nav2_params.yaml
launch/: backup.py  mapping.launch.py  navigation.launch.py  sim_bringup.launch.py
maps/: map_1782965660.pgm  map_1782965660.yaml  map_1783157624.pgm  map_1783157624.yaml
rviz/: amr_2dsim.rviz  mapping.rviz  nav2_default.rviz
server/: server.js
urdf/: amr.urdf  tango.urdf
worlds/: office.json  room.json
